[tool.poetry]
name = "spotivents"
version = "0.1.0"
description = "A fully asynchronous Spotify Dealer and Connect Client"
authors = ["justfoolingaround <kr.justfoolingaround@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "~=3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
